--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
+  http: ^0.12.0+1
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,8 @@ flutter:
   # https://flutter.io/assets-and-images/#from-packages
 
   assets:
-   - images/*
+   - images/timg.jpg
+   - images/icon_tab_rainbowhome_sort_selected.png
 
 
   # To add custom fonts to your application, add a fonts section here,
