--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   http: ^0.12.0+1
+  dio: ^1.0.14
 
 dev_dependencies:
   flutter_test:
